# Peakwise

./: .env.example  .gitignore  README.md  TASKS.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_warehouse_tables.py  002_phase2_tables.py
backend/seeds/: generate_seed_data.py  seed_db.py
backend/seeds/data/: apple_health_daily.csv  garmin_activities.csv  garmin_daily.csv  manual_inputs.csv  scale_data.csv  strava_activities.csv
backend/src/peakwise/: config.py  db.py  models.py
backend/src/peakwise/api/: __init__.py  deps.py  schemas.py
backend/src/peakwise/api/routes/: ask.py  debug.py  feedback.py  (+6 more)
backend/src/peakwise/features/: __init__.py  daily.py  helpers.py  hybrid.py  pipeline.py  running.py
backend/src/peakwise/ingestion/: __init__.py  apple_health.py  base.py  dedup.py  garmin.py  manual.py  normalize.py  pipeline.py  scale.py  strava.py
backend/src/peakwise/llm/: __init__.py  client.py  context.py  pipeline.py  prompts.py
backend/src/peakwise/recommendations/: __init__.py  pipeline.py  rules.py
backend/src/peakwise/scoring/: __init__.py  breakdowns.py  health.py  load_balance.py  pipeline.py  race_readiness.py  recovery.py  warnings.py
backend/src/peakwise/tagging/: __init__.py
backend/src/peakwise/trust/: __init__.py
backend/tests/: test_api.py  test_breakdowns.py  test_config.py  test_features.py  test_ingestion.py  test_llm.py  test_phase2_api.py  test_recommendations.py  test_scenarios.py  test_scoring.py  test_tagging.py  test_trust.py  test_warehouse.py
(+37 files in other folders)
